@@ -3,6 +3,7 @@ Development version (next release)
 - Updated to version 8.0 of the CLCudaAPI C++11 OpenCL header
 - Improved performance of GEMM kernels for small sizes by using a direct single-kernel implementation
 - Fixed a bug in the tests and samples related to waiting for an invalid event
+- Added support for compilation under Visual Studio 2013 (MSVC++ 12.0)
 - Added an option to set OpenCL compiler options through the env variable CLBLAST_BUILD_OPTIONS
 - Added an option to run tuned kernels multiple times to average execution times
 - Various minor fixes and enhancements
